--- a/style.css
+++ b/style.css
@@ -1,52 +1,31 @@
 body {
+  padding: 1rem;
   font-size: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: 'Inconsolata', monospace, sans-serif;
+  text-align: center;
   line-height: 1.5;
   background-color: #eef6f6;
 }
 
 h1 {
-  font-size: 1rem;
+  font-size: 4rem;
+  font-family: 'VT323', monospace, sans-serif;
   text-transform: lowercase;
+  text-shadow: 10px 10px pink;
 }
 
-.index-filter {
-  width: 100%;
-  margin-bottom: 1rem;
-}
-
-.index-filter button {
-  appearance: none;
-  background: none;
-  border: none;
-  padding: 5px 10px;
-  font-size: .8rem;
-  cursor: pointer;
-  background-color: pink;
-  border-radius: 3px;
-}
-
-.content-column {
-  max-width: 40rem;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: .5rem;
-  padding-right: .5rem;
-}
-
-.index-article {
-  margin-bottom: 1rem;
-}
-
-.index-article h1 {
+ul {
   margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-.index-article small {
-  font-size: .8rem;
+.pink-link {
+  color: inherit;
+  text-decoration: none;
+  text-shadow: .1em .1em pink; 
 }
 
-.index-article time {
-  font-size: .8rem;
-  font-style: italic;
+.pink-link:hover {
+  transform: translate(.1em);
 }
