--- a/themes/jackreid/layouts/partials/header.html
+++ b/themes/jackreid/layouts/partials/header.html
@@ -1,21 +1,21 @@
-<header>
-  <h1><a href="{{ .Site.BaseURL }}">Jack Reid</a></h1>
-  <nav>
-    <ul>
+<header class="site-header">
+  <h1 class="site-header__title"><a href="{{ .Site.BaseURL }}">Jack Reid</a></h1>
+  <nav class="site-header__nav">
+    <ul class="site-header__nav-list">
       <li>
-        <a href="{{ .Site.BaseURL }}/note/">Notes</a>
+        <a href="{{ .Site.BaseURL }}note">Notes</a>
       </li>
       <li>
-        <a href="{{ .Site.BaseURL }}/elsewhere">Elsewhere</a>
+        <a href="{{ .Site.BaseURL }}elsewhere">Elsewhere</a>
       </li>
       <li>
-        <a href="{{ .Site.BaseURL }}/post">Post</a>
+        <a href="{{ .Site.BaseURL }}post">Post</a>
       </li>
       <li>
-        <a href="{{ .Site.BaseURL }}/photoset">Photos</a>
+        <a href="{{ .Site.BaseURL }}photoset">Photos</a>
       </li>
       <li>
-        <a href="{{ .Site.BaseURL }}/work">Work</a>
+        <a href="{{ .Site.BaseURL }}work">Work</a>
       </li>
     </ul>
   </nav>
