--- a/themes/jackreid/layouts/partials/head.html
+++ b/themes/jackreid/layouts/partials/head.html
@@ -3,7 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="canonical" href="{{ .Permalink }}">
   <link href="https://fonts.googleapis.com/css?family=Inconsolata|VT323" rel="stylesheet">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css">
+  <link rel="stylesheet" href="{{ "css/style.css" | absURL }}">
 
   <meta property="og:site_name" content="{{ .Site.Title }}" />
   <meta property="og:locale" content="{{ .Site.LanguageCode }}" />
