--- a/themes/jackreid/layouts/partials/header.html
+++ b/themes/jackreid/layouts/partials/header.html
@@ -3,19 +3,19 @@
   <nav class="site-header__nav">
     <ul class="site-header__nav-list">
       <li>
-        <a href="{{ .Site.BaseURL }}note">Notes</a>
+        <a href="{{ "note" | absURL }}">Notes</a>
       </li>
       <li>
-        <a href="{{ .Site.BaseURL }}elsewhere">Elsewhere</a>
+        <a href="{{ "elsewhere" | absURL }}">Elsewhere</a>
       </li>
       <li>
-        <a href="{{ .Site.BaseURL }}post">Post</a>
+        <a href="{{ "post" | absURL }}">Post</a>
       </li>
       <li>
-        <a href="{{ .Site.BaseURL }}photoset">Photos</a>
+        <a href="{{ "photoset" | absURL }}">Photos</a>
       </li>
       <li>
-        <a href="{{ .Site.BaseURL }}work">Work</a>
+        <a href="{{ "work" | absURL }}">Work</a>
       </li>
     </ul>
   </nav>
