--- a/themes/jackreid/layouts/partials/header.html
+++ b/themes/jackreid/layouts/partials/header.html
@@ -6,10 +6,7 @@
         <a href="{{ "note" | absURL }}">Notes</a>
       </li>
       <li>
-        <a href="{{ "elsewhere" | absURL }}">Elsewhere</a>
-      </li>
-      <li>
-        <a href="{{ "post" | absURL }}">Post</a>
+        <a href="{{ "post" | absURL }}">Posts</a>
       </li>
       <li>
         <a href="{{ "photoset" | absURL }}">Photos</a>
