--- a/themes/jackreid/layouts/_default/list.html
+++ b/themes/jackreid/layouts/_default/list.html
@@ -1,19 +1,22 @@
 {{ define "main" }}
 <main>
-    <article>
-        <header>
-            <h1>{{.Title}}</h1>
-        </header>
-        <!-- "{{.Content}}" pulls from the markdown content of the corresponding _index.md -->
-        {{.Content}}
-    </article>
-    <ul>
+  <article>
+    <header>
+      <h1>{{if eq .Kind "taxonomy"}}#{{end}}{{.Title}}</h1>
+    </header>
+    <!-- "{{.Content}}" pulls from the markdown content of the corresponding _index.md -->
+    {{.Content}}
+  </article>
+  <ul class="list-page__list">
     <!-- Ranges through content/posts/*.md -->
     {{ range .Pages }}
-        <li>
-            <a href="{{.Permalink}}">{{.Date.Format "2006-01-02"}} | {{.Title}}</a>
-        </li>
+    <li class="list-page__list-item">
+      <time class="list-page__list-item-date">{{ .Date.Format "2 January 2006" }}</time>
+      <h2 class="list-page__list-item-title">
+        <a href="{{.Permalink}}">{{ .Title }}</a>
+      </h2>
+    </li>
     {{ end }}
-    </ul>
+  </ul>
 </main>
 {{ end }}
