--- a/themes/jackreid/layouts/_default/note.html
+++ b/themes/jackreid/layouts/_default/note.html
@@ -1,22 +1,19 @@
 {{ define "main" }}
 <main>
-    <article>
-        <header>
-            <h1>{{.Title}}</h1>
-        </header>
-        <!-- "{{.Content}}" pulls from the markdown content of the corresponding _index.md -->
-        {{.Content}}
-    </article>
-    <ul>
+  <article>
+    <header>
+      <h1 class="note-list__title">{{.Title}}</h1>
+    </header>
+    {{.Content}}
+  </article>
+  <ul class="note-list__list">
     {{ range .Pages }}
-        <li>
-            <h2>{{ .Title }}</h2>
-            <div>
-              {{ .Content }}
-            </div>
-            <a href="{{.Permalink}}">{{.Date.Format "2006-01-02"}}</a>
-        </li>
+    <li class="note-list__list-item">
+      <a class="note-list__list-item-permalink" href="{{.Permalink}}">{{.Date.Format "2 January 2006"}}</a>
+      <h2 class="note-list__list-item-title">{{ .Title }}</h2>
+      {{ .Content }}
+    </li>
     {{ end }}
-    </ul>
+  </ul>
 </main>
 {{ end }}
