--- a/themes/jackreid/layouts/index.html
+++ b/themes/jackreid/layouts/index.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
-<h1>{{ .Title }}</h1>
+<div class="homepage-logo"></div>
+<h1 class="homepage-title">{{ .Site.Title }}</h1>
 {{ .Content }}
 {{ end }}
