--- a/themes/jackreid/layouts/partials/head.html
+++ b/themes/jackreid/layouts/partials/head.html
@@ -1,8 +1,8 @@
 <head>
-  <title>{{ .Site.Title }}</title>
+  <title>{{ .Title }} | {{ .Site.Title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="canonical" href="{{ .Permalink }}">
-  <link href="https://fonts.googleapis.com/css?family=Inconsolata|VT323" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i|VT323&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{{ "css/style.css" | absURL }}">
 
   <meta property="og:site_name" content="{{ .Site.Title }}" />
