--- a/themes/jackreid/static/css/style.css
+++ b/themes/jackreid/static/css/style.css
@@ -1,16 +1,50 @@
+* {
+  box-sizing: border-box;
+}
+
 html, body {
   min-height: 100%;
 }
 
 body {
   margin: 0;
-  font-family: Inconsolata, monospace, sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   background-color: #eef6f6;
 }
 
+a {
+  color: coral;
+  text-decoration: underline solid coral;
+}
+
+a:visited {
+  color: coral;
+  text-decoration: underline dashed pink;
+}
+
+a:hover, a:focus {
+  color: white;
+  background-color: coral;
+  text-decoration: none;
+}
+
+a:focus {
+  outline: 5px solid white;
+}
+
+blockquote {
+  margin: 0;
+  padding-left: 1rem;
+  border-left: 5px solid pink;
+}
+
+/**
+ * Site Wide
+ */
 .site-wrapper {
-  max-width: 50rem;
-  margin: 2rem auto 0;
+  width: 100%;
+  max-width: 40rem;
+  margin: 2rem auto;
   padding: 0 1rem;
 }
 
@@ -22,6 +56,7 @@ body {
 .site-header__title {
   margin: 0;
   font-size: 1rem;
+  text-transform: lowercase;
 }
 
 .site-header__nav {
@@ -37,4 +72,133 @@ body {
 
 .site-header__nav-list li:not(:last-child) {
   margin-right: 1rem;
+}
+
+/**
+ * Homepage
+ */
+.homepage-logo {
+  margin: 4rem auto 0;
+  width: 10rem;
+  height: 10rem;
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 50%;
+  background: linear-gradient(coral, #eef6f6);
+}
+
+.homepage-title {
+  margin: 0;
+  font-family: 'VT323', 'Source Sans Pro', monospace, sans-serif;
+  font-size: 4rem;
+  color: coral;
+  text-align: center;
+  text-shadow: 3px 3px 0 pink;
+  text-transform: lowercase;
+  transform: translateY(-6rem);
+}
+
+/**
+ * List pages
+ */
+.list-page__list {
+  margin: 2rem 0 0;
+  padding: 0;
+  list-style: none;
+}
+
+.list-page__list-item {
+  margin-bottom: 3rem;
+}
+
+.list-page__list-item-title {
+  margin: .5rem 0 0;
+  font-weight: bold;
+}
+
+.note-list__title {
+  margin-top: 2rem;
+}
+
+.note-list__list {
+  margin: 2rem 0 0;
+  padding: 0;
+  list-style: none;
+}
+
+.note-list__list-item {
+  margin-bottom: 3rem;
+  padding: 1rem;
+  border: 2px dotted pink;
+}
+
+.note-list__list-item-title {
+  margin-top: .5rem;
+}
+
+/**
+ * Single pages
+ */
+.single-article__main {
+  margin-top: 2rem;
+}
+
+.single-article__main--note {
+  border: 2px dotted pink;
+  padding: 1rem;
+}
+
+.single-sequence-nav {
+  border-top: 2px solid pink;
+  border-bottom: 2px solid pink;
+  margin-top: 2rem;
+  padding: 1rem 0;
+}
+
+.single-sequence-nav__title {
+  margin: 0 0 .5rem;
+  text-transform: capitalize;
+}
+
+.single-sequence-nav__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+}
+
+.single-sequence-nav__list-item {
+  display: contents;
+}
+
+.single-sequence-nav__previous:before {
+  content: '<';
+}
+
+.single-sequence-nav__next:after {
+  content: ' >';
+}
+
+.single-article__title {
+  margin-top: .5rem;
+}
+
+.single-article__main--photoset img {
+  display: block;
+  max-width: 100%;
+}
+
+.single-tags-list {
+  margin: 1rem 0 0;
+  padding: 0;
+  list-style: none;
+}
+
+.single-tags-list__item {
+  display: inline-block;
+}
+
+.single-tags-list__item a:before {
+  content: '#';
 }
