--- a/themes/jackreid/layouts/partials/head.html
+++ b/themes/jackreid/layouts/partials/head.html
@@ -3,11 +3,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="canonical" href="{{ .Permalink }}">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i|VT323&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="{{ "favicon.png" | absURL }}" />
   <link rel="stylesheet" href="{{ "css/style.css" | absURL }}">
+  {{ range .AlternativeOutputFormats -}}
+  {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
+  {{ end -}}
 
   <meta property="og:site_name" content="{{ .Site.Title }}" />
   <meta property="og:locale" content="{{ .Site.LanguageCode }}" />
   <meta property="og:url" content="{{ .Permalink }}" />
   <meta property="og:title" content="{{ .Title }}" />
   <meta property="og:type" content="article" />
+  <meta property="og:image" content="{{ "/open-graph.png" | absURL }}">
 </head>
