--- a/themes/jackreid/layouts/index.html
+++ b/themes/jackreid/layouts/index.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
 <div class="homepage-logo"></div>
 <h1 class="homepage-title">{{ .Site.Title }}</h1>
+<article class="homepage-article">
 {{ .Content }}
+</article>
 {{ end }}
