--- a/themes/jackreid/layouts/partials/head.html
+++ b/themes/jackreid/layouts/partials/head.html
@@ -15,4 +15,8 @@
   <meta property="og:title" content="{{ .Title }}" />
   <meta property="og:type" content="article" />
   <meta property="og:image" content="{{ "/open-graph.png" | absURL }}">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@jackreid" />
+  <meta name="twitter:creator" content="@jackreid" />
+  <meta name="twitter:image" content="{{ "/open-graph.png" | absURL }}">
 </head>
