add trains page

--- a/themes/jackreid/layouts/partials/footer.html
+++ b/themes/jackreid/layouts/partials/footer.html
@@ -1,2 +1,4 @@
+{{ if .IsHome }}
 <script async defer type="module" src="/js/index.js"></script>
+{{ end }}
 <script async defer type="module" src="/js/trains.js"></script>
