--- a/themes/jackreid/layouts/partials/head.html
+++ b/themes/jackreid/layouts/partials/head.html
@@ -2,7 +2,10 @@
   <title>{{ .Title }} | {{ .Site.Title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="canonical" href="{{ .Permalink }}">
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i|VT323&display=swap" rel="stylesheet">
+  {{ if .IsHome }}
+  <link href="https://fonts.googleapis.com/css?family=VT323&display=swap" rel="stylesheet">
+  {{ end }}
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i" rel="stylesheet">
   <link rel="icon" type="image/png" href="{{ "favicon.png" | absURL }}" />
   <link rel="stylesheet" href="{{ "css/style.css" | absURL }}">
   {{ range .AlternativeOutputFormats -}}
