--- a/themes/jackreid/layouts/partials/header.html
+++ b/themes/jackreid/layouts/partials/header.html
@@ -8,11 +8,9 @@
       <li>
         <a href="{{ "post" | absURL }}">Posts</a>
       </li>
-      <!--
       <li>
-        <a href="{{ "photoset" | absURL }}">Photos</a>
+        <a href="{{ "photo" | absURL }}">Photos</a>
       </li>
-      -->
       <li>
         <a href="{{ "work" | absURL }}">Work</a>
       </li>
