--- a/themes/jackreid/layouts/_default/photo.html
+++ b/themes/jackreid/layouts/_default/photo.html
@@ -2,16 +2,19 @@
 <main>
   <article>
     <header>
-      <h1 class="photo-list__title">{{.Title}}</h1>
+      <h1 class="note-list__title">{{.Title}}</h1>
     </header>
     {{.Content}}
   </article>
-  <ul class="photo-list__list">
+  <ul class="note-list__list">
     {{ range .Pages }}
-      <li class="photo-list__list-item">
-        <a class="photo-list__list-item-permalink" href="{{.Permalink}}">{{.Date.Format "2 January 2006"}}</a>
-        <h2 class="photo-list__list-item-title">{{ .Title }}</h2>
-        {{ .Resources }}
+      <li class="note-list__list-item">
+        {{ with index (.Resources.ByType "image") 0 }}
+          {{ $image := .Resize "600x" }}
+          <img src="{{ $image.RelPermalink }}" alt="{{ .Title }}">
+        {{ end }}
+        <h2 class="note-list__list-item-title">{{ .Title }}</h2>
+        <a class="note-list__list-item-permalink" href="{{.Permalink}}">{{.Date.Format "2 January 2006"}}</a>
       </li>
     {{ end }}
   </ul>
