--- a/themes/jackreid/layouts/partials/head.html
+++ b/themes/jackreid/layouts/partials/head.html
@@ -17,13 +17,23 @@
   <meta property="og:url" content="{{ .Permalink }}" />
   <meta property="og:title" content="{{ .Title }}" />
   <meta property="og:type" content="article" />
-  <meta property="og:image" content="{{ "/open-graph.png" | absURL }}">
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@jackreid" />
   <meta name="twitter:creator" content="@jackreid" />
-  <meta name="twitter:image" content="{{ "/open-graph.png" | absURL }}">
+
+  {{ if eq .Section "photo" }}
+    {{ with index (.Resources.ByType "image") 0 }}
+    {{ $image := .Fit "600x300" }}
+    <meta property="og:image" content="{{ $image.RelPermalink }}">
+    <meta name="twitter:image" content="{{ $image.RelPermalink }}">
+    {{ end }}
+  {{ else }}
+    <meta property="og:image" content="{{ "/open-graph.png" | absURL }}">
+    <meta name="twitter:image" content="{{ "/open-graph.png" | absURL }}">
+  {{ end }}
+
   {{ if or (eq .Section "note") (eq .Section "post") }}
-  <meta name="twitter:description" content="{{ .Content | truncate 100 }}">
+    <meta name="twitter:description" content="{{ .Content | truncate 100 }}">
   {{ end }}
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-53536747-2"></script>
