--- a/themes/jackreid/layouts/_default/single.html
+++ b/themes/jackreid/layouts/_default/single.html
@@ -22,7 +22,8 @@
   <article class="single-article__article">
     {{ with .Resources.ByType "image" }}
       {{ range . }}
-        <img class="single-article__resource-image" src="{{ .RelPermalink | absURL}}" alt="{{ .Name }}">
+        {{ $image := .Resize "600x" }}
+        <img class="single-article__resource-image" src="{{ $image.RelPermalink | absURL }}" alt="{{ .Name }}">
       {{ end }}
     {{ end }}
     {{ if .Params.instagram }}
