--- a/themes/jackreid/layouts/partials/head.html
+++ b/themes/jackreid/layouts/partials/head.html
@@ -3,7 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="canonical" href="{{ .Permalink }}">
   {{ if .IsHome }}
-  <link href="https://fonts.googleapis.com/css?family=VT323&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=VT323&display=swap&text=jackreid" rel="stylesheet">
   {{ end }}
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i" rel="stylesheet">
   <link rel="icon" type="image/png" href="{{ "favicon.png" | absURL }}" />
