--- a/themes/jackreid/layouts/partials/footer.html
+++ b/themes/jackreid/layouts/partials/footer.html
@@ -1,3 +1,14 @@
+<!--
+<footer class="site-footer">
+  <nav class="site-footer__nav">
+    <ul class="site-header__nav-list">
+      <li>
+        <a href="{{ "rss" | absURL }}">RSS</a>
+      </li>
+    </ul>
+  </nav>
+</footer>
+-->
 {{ if .IsHome }}
 <script async defer type="module" src="/js/index.js"></script>
 {{ end }}
