--- a/themes/jackreid/layouts/partials/header.html
+++ b/themes/jackreid/layouts/partials/header.html
@@ -14,6 +14,9 @@
       <li>
         <a href="{{ "work" | absURL }}">Work</a>
       </li>
+      <li>
+        <a href="{{ "rss" | absURL }}">RSS</a>
+      </li>
     </ul>
   </nav>
 </header>
