--- a/themes/jackreid/layouts/partials/head.html
+++ b/themes/jackreid/layouts/partials/head.html
@@ -8,9 +8,7 @@
   {{ if .IsHome }}
     <meta name="description" content="I'm a software engineer working at BuzzFeed in London. I also do a little bit of photography, a lot of reading, and a bit of writing.">
   {{ end }}
-  {{ if .IsHome }}
-  <link href="https://fonts.googleapis.com/css?family=VT323&display=swap&text=jackreid" rel="stylesheet">
-  {{ end }}
+  <link href="https://fonts.googleapis.com/css?family=VT323&display=swap&text=jackreidnoideam8" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i" rel="stylesheet">
   <link rel="icon" type="image/png" href="{{ "favicon.png" | absURL }}" />
   <link rel="stylesheet" href="{{ "css/style.css" | absURL }}">
