--- a/themes/jackreid/static/css/style.css
+++ b/themes/jackreid/static/css/style.css
@@ -83,6 +83,17 @@ blockquote {
   margin-top: 2rem;
 }
 
+
+@keyframes bob {
+  0%, 100% {
+    transform: translateY(0) scale(1.1);;
+  }
+
+  50% {
+    transform: translateY(20%) scale(1);
+  }
+}
+
 /**
  * Homepage
  */
@@ -94,6 +105,7 @@ blockquote {
   max-height: 100%;
   border-radius: 50%;
   background: linear-gradient(coral, #eef6f6);
+  animation: bob 5s infinite ease-in-out;
 }
 
 .homepage-title {
@@ -224,4 +236,29 @@ blockquote {
 
 .single-tags-list__item a:before {
   content: '#';
+}
+
+/**
+ * 404
+ */
+.fourohfour-logo {
+  margin: 4rem auto 0;
+  width: 20rem;
+  height: 20rem;
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 50%;
+  background: linear-gradient(coral, #eef6f6);
+  animation: bob 5s infinite ease-in-out;
+}
+
+.fourohfour-title {
+  margin: 0 0 -6rem;
+  font-family: 'VT323', 'Source Sans Pro', monospace, sans-serif;
+  font-size: 8rem;
+  color: coral;
+  text-align: center;
+  text-shadow: 3px 3px 0 pink;
+  text-transform: lowercase;
+  transform: translateY(-12rem);
 }
