--- a/themes/jackreid/layouts/partials/header.html
+++ b/themes/jackreid/layouts/partials/header.html
@@ -12,6 +12,9 @@
         <a href="{{ "photo" | absURL }}">Photos</a>
       </li>
       <li>
+        <a href="{{ "books/read" | absURL }}">Books</a>
+      </li>
+      <li>
         <a href="{{ "work" | absURL }}">Work</a>
       </li>
       <li>
