--- a/themes/jackreid/layouts/index.html
+++ b/themes/jackreid/layouts/index.html
@@ -4,7 +4,7 @@
 <article class="homepage-article">
   {{ $reading := index .Site.Data.books.reading 0 }}
   <p>At <a href="/work">BuzzFeed</a>, in London.</p>
-  <p>Right now I'm reading <a href="https://www.goodreads.com/user/show/54047855-jack-reid">{{ $reading.title }}</a>.</p>
+  <p>Right now I'm reading <a href="https://www.goodreads.com/user/show/54047855-jack-reid">{{ $reading.title }}</a>. More on reading <a href="/books/read">here</a>.</p>
 {{ .Content }}
 </article>
 {{ end }}
