display film data

--- a/themes/jackreid/layouts/_default/films.html
+++ b/themes/jackreid/layouts/_default/films.html
@@ -1,15 +1,12 @@
 {{ define "main" }}
 <nav class="single-static-nav">
-  <h2 class="single-static-nav__title">Books</h2>
+  <h2 class="single-static-nav__title">Films</h2>
   <ul class="single-static-nav__list">
     <li class="single-static-nav__list-item">
-      <a class="" href="/books/read">Read</a>
+      <a class="" href="/films/watched">Watched</a>
     </li>
     <li class="single-static-nav__list-item">
-      <a class="" href="/books/reading">Reading</a>
-    </li>
-    <li class="single-static-nav__list-item">
-      <a class="" href="/books/toread">To Read</a>
+      <a class="" href="/films/towatch">To Watch</a>
     </li>
   </ul>
 </nav>
