--- a/themes/jackreid/layouts/partials/header.html
+++ b/themes/jackreid/layouts/partials/header.html
@@ -15,6 +15,9 @@
         <a href="{{ "books/read" | absURL }}">Books</a>
       </li>
       <li>
+        <a href="{{ "films/watched" | absURL }}">Films</a>
+      </li>
+      <li>
         <a href="{{ "work" | absURL }}">Work</a>
       </li>
       <li>
