--- a/themes/jackreid/layouts/index.html
+++ b/themes/jackreid/layouts/index.html
@@ -3,5 +3,6 @@
 <h1 class="homepage-title">{{ .Site.Title }}</h1>
 <article class="homepage-article">
 {{ .Content }}
+{{- partial "recent_links.html" . -}}
 </article>
 {{ end }}
