--- a/themes/jackreid/layouts/_default/note.html
+++ b/themes/jackreid/layouts/_default/note.html
@@ -8,11 +8,7 @@
   </article>
   <ul class="note-list__list">
     {{ range .Pages }}
-    <li class="note-list__list-item">
-      <a class="note-list__list-item-permalink" href="{{.Permalink}}">{{.Date.Format "2 January 2006"}}</a>
-      <h2 class="note-list__list-item-title">{{ .Title }}</h2>
-      {{ .Content }}
-    </li>
+      {{- partial "note.html" . -}}
     {{ end }}
   </ul>
 </main>
