--- a/themes/jackreid/layouts/partials/footer.html
+++ b/themes/jackreid/layouts/partials/footer.html
@@ -1,11 +1,11 @@
-<!--
 <footer class="site-footer">
   <nav class="site-footer__nav">
-    <ul class="site-header__nav-list">
-      <li>
-        <a href="{{ "rss" | absURL }}">RSS</a>
-      </li>
+    <ul class="site-footer__nav-list">
+      <li><a rel="me" href="mailto:hello@jackreid.xyz">hello@jackreid.xyz</a></li>
+      <li><a rel="me" href="https://twitter.com/jackreid">Twitter</a></li>
+      <li><a rel="me" href="https://instagram.com/jackwreid">Instagram</a></li>
+      <li><a rel="me" href="https://linkedin.com/in/jackwreid">LinkedIn</a></li>
+      <li><a rel="me" href="https://mastodon.social/@jackreid">Mastodon</a></li>
     </ul>
   </nav>
 </footer>
--->
