--- a/themes/jackreid/layouts/index.html
+++ b/themes/jackreid/layouts/index.html
@@ -4,5 +4,6 @@
 <article class="homepage-article">
 {{ .Content }}
 {{- partial "recent_links.html" . -}}
+<p>See more notes <a href="{{ "/note" | absURL }}">here</a>.</p>
 </article>
 {{ end }}
