--- a/themes/jackreid/layouts/partials/header.html
+++ b/themes/jackreid/layouts/partials/header.html
@@ -12,10 +12,7 @@
         <a href="{{ "photo" | absURL }}">Photos</a>
       </li>
       <li>
-        <a href="{{ "books/read" | absURL }}">Books</a>
-      </li>
-      <li>
-        <a href="{{ "films/watched" | absURL }}">Films</a>
+        <a href="{{ "media" | absURL }}">Media</a>
       </li>
       <li>
         <a href="{{ "work" | absURL }}">Work</a>
