--- a/themes/jackreid/static/css/style.css
+++ b/themes/jackreid/static/css/style.css
@@ -2,9 +2,20 @@
   --c-bg: #f9f4ef;
   --c-title: #020826;
   --c-body: #716040;
-  --c-i-dark: #8c7851;
-  --c-i-pale: #eaddcf;
+  --c-i-one: #8c7851;
+  --c-i-two: #eaddcf;
   --c-accent: #f25042;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --c-bg: #232946;
+    --c-title: #fffffe;
+    --c-body: #b8c1ec;
+    --c-i-one: #b8c1ec;
+    --c-i-two: #eebbc3;
+    --c-i-accent: #eebbc3;
+  }
 }
 
 
@@ -160,8 +171,14 @@ blockquote {
   max-width: 100%;
   max-height: 100%;
   border-radius: 50%;
-  background: linear-gradient(var(--c-accent), var(--c-i-pale));
+  background: linear-gradient(var(--c-accent), var(--c-i-two));
   animation: bob 5s infinite ease-in-out;
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+  .homepage-logo {
+    animation: none;
+  }
 }
 
 .homepage-title {
@@ -170,7 +187,7 @@ blockquote {
   font-size: 4rem;
   color: var(--c-accent);
   text-align: center;
-  text-shadow: 3px 3px 0 var(--c-i-pale);
+  text-shadow: 3px 3px 0 var(--c-i-two);
   text-transform: lowercase;
   transform: translateY(-6rem);
 }
@@ -356,8 +373,14 @@ blockquote {
   max-width: 100%;
   max-height: 100%;
   border-radius: 50%;
-  background: linear-gradient(var(--c-accent), var(--c-i-pale));
+  background: linear-gradient(var(--c-accent), var(--c-i-two));
   animation: bob 5s infinite ease-in-out;
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+  .fourohfour-logo {
+    animation: none;
+  }
 }
 
 .fourohfour-title {
