fix book author

--- a/themes/jackreid/layouts/shortcodes/booktable.html
+++ b/themes/jackreid/layouts/shortcodes/booktable.html
@@ -26,7 +26,7 @@
     <tr>
       <td class="book-table__date">{{ dateFormat "2 Jan '06" .date_updated }}</td>
       <td class="book-table__title">{{ .title }}</td>
-      <td class="book-table__author">{{ .name }}</td>
+      <td class="book-table__author">{{ .author }}</td>
     </tr>
     {{ end }}
   </tbody>
