add crude likes page

--- a/themes/jackreid/layouts/_default/media.html
+++ b/themes/jackreid/layouts/_default/media.html
@@ -17,6 +17,9 @@
     <li class="single-static-nav__list-item">
       <a href="{{ "/films/towatch" | absURL }}">To Watch</a>
     </li>
+    <li class="single-static-nav__list-item">
+      <a href="{{ "/articles/liked" | absURL }}">Liked Articles</a>
+    </li>
   </ul>
 </nav>
 <article>
