articles to likes

--- a/themes/jackreid/layouts/shortcodes/articletable.html
+++ b/themes/jackreid/layouts/shortcodes/articletable.html
@@ -1,7 +1,7 @@
 {{ $scratch := newScratch }}
 {{ $data := "nil" }}
 {{ $scratch.Set "limit" (.Get "limit" | default 10000) }}
-{{ $data = first ($scratch.Get "limit") $.Site.Data.likes }}
+{{ $data = first ($scratch.Get "limit") $.Site.Data.articles }}
 
 <table class="book-table">
   <thead>
