--- a/themes/jackreid/layouts/partials/footer.html
+++ b/themes/jackreid/layouts/partials/footer.html
@@ -9,3 +9,14 @@
     </ul>
   </nav>
 </footer>
+ <script>
+if (window.netlifyIdentity) {
+  window.netlifyIdentity.on('init', user => {
+    if (!user) {
+      window.netlifyIdentity.on('login', () => {
+        document.location.href = '/admin/';
+      });
+    }
+  });
+}
+ </script>
