--- a/themes/jackreid/layouts/partials/head.html
+++ b/themes/jackreid/layouts/partials/head.html
@@ -40,11 +40,5 @@
     <meta name="twitter:description" content="{{ .Content | truncate 100 }}">
   {{ end }}
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-53536747-2"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-53536747-2');
-  </script>
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
