--- a/themes/jackreid/static/css/style.css
+++ b/themes/jackreid/static/css/style.css
@@ -18,12 +18,12 @@
   }
 }
 
-
 * {
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   min-height: 100%;
 }
 
@@ -44,11 +44,17 @@ a:visited {
   text-decoration: underline dashed var(--c-accent);
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: var(--c-title);
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus {
   color: white;
   background-color: var(--c-accent);
   text-decoration: none;
@@ -71,6 +77,21 @@ blockquote {
 
 .u-title {
   color: var(--c-title);
+}
+
+.pagination {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.page-count {
+  margin: 0 1rem;
+}
+
+.prev-wrapper p, .next-wrapper p {
+  margin: 0;
 }
 
 /**
@@ -105,14 +126,13 @@ blockquote {
 
   .site-header__title {
     text-align: center;
-    margin-bottom: .5rem;
+    margin-bottom: 0.5rem;
   }
 
   .site-header__nav {
     justify-content: center;
   }
 }
-
 
 .site-header__nav-list {
   display: contents;
@@ -133,7 +153,7 @@ blockquote {
   display: flex;
   margin: 0;
   padding: 0;
-  font-size: .8rem;
+  font-size: 0.8rem;
   list-style: none;
 }
 
@@ -150,10 +170,10 @@ blockquote {
   font-weight: bold;
 }
 
-
 @keyframes bob {
-  0%, 100% {
-    transform: translateY(0) scale(1.1);;
+  0%,
+  100% {
+    transform: translateY(0) scale(1.1);
   }
 
   50% {
@@ -205,18 +225,20 @@ blockquote {
 /**
  * List pages
  */
-.list-page__list, .post-list__list {
+.list-page__list,
+.post-list__list {
   margin: 2rem 0 0;
   padding: 0;
   list-style: none;
 }
 
-.list-page__list-item, .post-list__list {
+.list-page__list-item,
+.post-list__list {
   margin-bottom: 3rem;
 }
 
 .list-page__list-item-title {
-  margin: .5rem 0 0;
+  margin: 0.5rem 0 0;
   font-weight: bold;
 }
 
@@ -238,7 +260,7 @@ blockquote {
 }
 
 .note-list__list-item-title {
-  margin-top: .5rem;
+  margin-top: 0.5rem;
   color: var(--c-title);
 }
 
@@ -254,9 +276,9 @@ blockquote {
   margin: 0;
 }
 
-.post-list__list-item-date{
+.post-list__list-item-date {
   display: block;
-  margin-top: .5rem;
+  margin-top: 0.5rem;
   font-style: italic;
 }
 
@@ -284,7 +306,7 @@ blockquote {
 }
 
 .single-sequence-nav__title {
-  margin: 0 0 .5rem;
+  margin: 0 0 0.5rem;
   color: var(--c-title);
   text-transform: capitalize;
 }
@@ -317,7 +339,7 @@ blockquote {
 }
 
 .single-static-nav__title {
-  margin: 0 0 .5rem;
+  margin: 0 0 0.5rem;
   color: var(--c-title);
   text-transform: capitalize;
 }
@@ -334,7 +356,7 @@ blockquote {
 }
 
 .single-article__title {
-  margin: .5rem 0 0;
+  margin: 0.5rem 0 0;
   color: var(--c-title);
 }
 
@@ -401,7 +423,8 @@ blockquote {
   width: 100%;
 }
 
-.book-table th, td {
+.book-table th,
+td {
   text-align: left;
 }
 
@@ -411,7 +434,7 @@ blockquote {
 }
 
 .book-table td {
-  padding: .5rem 0;
+  padding: 0.5rem 0;
   vertical-align: top;
 }
 
@@ -426,22 +449,24 @@ blockquote {
 /**
  * Share Form
  */
-#noteform input, #noteform label {
+#noteform input,
+#noteform label {
   display: block;
 }
 
 #noteform label {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
-#noteform input, #noteform textarea {
+#noteform input,
+#noteform textarea {
   margin-bottom: 2rem;
   width: 100%;
   font-size: 1rem;
-  padding: .5rem;
+  padding: 0.5rem;
 }
 
-#noteform input[type=submit] {
+#noteform input[type='submit'] {
   margin: 0 auto;
   width: 10rem;
 }
