--- a/themes/jackreid/layouts/shortcodes/articletable.html
+++ b/themes/jackreid/layouts/shortcodes/articletable.html
@@ -3,7 +3,7 @@
 {{ $scratch.Set "limit" (.Get "limit" | default 10000) }}
 {{ $data = first ($scratch.Get "limit") $.Site.Data.articles }}
 
-<table class="book-table">
+<table class="media-table">
   <thead>
     <tr>
       <th>Date</th>
@@ -13,8 +13,8 @@
   <tbody>
     {{ range $data }}
     <tr>
-      <td class="book-table__date">{{ dateFormat "2 Jan '06" .date_updated }}</td>
-      <td class="book-table__title"><a href="{{ .link }}">{{ .title }}</a></td>
+      <td class="media-table__date">{{ dateFormat "2 Jan '06" .date_updated }}</td>
+      <td class="media-table__title"><a href="{{ .link }}">{{ .title }}</a></td>
     </tr>
     {{ end }}
   </tbody>
