--- a/themes/jackreid/layouts/shortcodes/booktable.html
+++ b/themes/jackreid/layouts/shortcodes/booktable.html
@@ -13,7 +13,7 @@
   {{ $data = first ($scratch.Get "limit") $.Site.Data.books.toread }}
 {{ end }}
 
-<table class="book-table">
+<table class="media-table media-table--book">
   <thead>
     <tr>
       <th>Date</th>
@@ -24,9 +24,9 @@
   <tbody>
     {{ range $data }}
     <tr>
-      <td class="book-table__date">{{ dateFormat "2 Jan '06" .date_updated }}</td>
-      <td class="book-table__title">{{ .title }}</td>
-      <td class="book-table__author">{{ .author }}</td>
+      <td class="media-table__date">{{ dateFormat "2 Jan '06" .date_updated }}</td>
+      <td class="media-table__title">{{ .title }}</td>
+      <td class="media-table__author">{{ .author }}</td>
     </tr>
     {{ end }}
   </tbody>
