--- a/themes/jackreid/layouts/shortcodes/filmtable.html
+++ b/themes/jackreid/layouts/shortcodes/filmtable.html
@@ -11,7 +11,7 @@
   {{ $data = first ($scratch.Get "limit") $.Site.Data.films.towatch}}
 {{ end }}
 
-<table class="book-table">
+<table class="media-table">
   <thead>
     <tr>
       <th>Date</th>
@@ -22,9 +22,9 @@
   <tbody>
     {{ range $data }}
     <tr>
-      <td class="book-table__date">{{ dateFormat "2 Jan '06" .date_updated }}</td>
-      <td class="book-table__title">{{ .name }}</td>
-      <td class="book-table__year">{{ .year }}</td>
+      <td class="media-table__date">{{ dateFormat "2 Jan '06" .date_updated }}</td>
+      <td class="media-table__title">{{ .name }}</td>
+      <td class="media-table__year">{{ .year }}</td>
     </tr>
     {{ end }}
   </tbody>
